--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recipes">Recipes</string>
     <string name="recipe_detail">Recipe</string>
     <string name="recipe_image_cd">Recipe Picture</string>
+    <string name="search">Search</string>
 </resources>
