--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="recipe_detail">Recipe</string>
     <string name="recipe_image_cd">Recipe Picture</string>
     <string name="search">Search</string>
+    <string name="loading">Loading...</string>
 </resources>
